kvhqc (3.4.16-4) unstable; urgency=low

  * bugfix debian_files/rules and debian_files/control

 -- Alexander Bürger <alexander.buerger@met.no>  Fri, 01 Apr 2016 08:00:08 +0200

kvhqc (3.4.16-1) unstable; urgency=low

  * window title is database hostname
  * watchrr for typeid 305
  * updated Build-Depends
  * use level from obs_pgm when generating sensor lists

 -- Alexander Bürger <alexander.buerger@met.no>  Thu, 31 Mar 2016 08:00:08 +0200

kvhqc (3.4.15-1) unstable; urgency=low

  * update for error list

 -- Alexander Bürger <alexander.buerger@met.no>  Wed, 25 Nov 2015 13:45:45 +0100

kvhqc (3.4.14-1) unstable; urgency=low

  * allow foreign stations as neighbors
  * skip stationds without municipid
  * add stations with unknown county to OTHER/ANDRE

 -- Alexander Bürger <alexander.buerger@met.no>  Tue, 24 Nov 2015 09:00:09 +0100

kvhqc (3.4.13-1) unstable; urgency=low

  * bugfixes in accept_corrected and accept_original

 -- Alexander Bürger <alexander.buerger@met.no>  Fri, 09 Jan 2015 16:46:52 +0100

kvhqc (3.4.12-1) unstable; urgency=low

  * fetch param limits from station_param table, ignoring all with hour != -1

 -- Alexander Bürger <alexander.buerger@met.no>  Tue, 04 Nov 2014 10:01:07 +0100

kvhqc (3.4.11-1) unstable; urgency=low

  * TimeSeriesView: change symbol more often
  * TimeSeriesView: bugfix updating MiDateTimeEdit

 -- Alexander Bürger <alexander.buerger@met.no>  Tue, 07 Oct 2014 09:49:58 +0200

kvhqc (3.4.10-1) unstable; urgency=low

  * reinserter: if fhqc==0, force it to fhqc==3

 -- Alexander Bürger <alexander.buerger@met.no>  Thu, 02 Oct 2014 13:29:28 +0200

kvhqc (3.4.9-1) unstable; urgency=low

  * ToolInterpolate: better handling direction "0 degrees"
  * new attempt at forwarding milog to log4cpp
  * allow rejecting rejected data, effectively setting fhqc=A
  * fix lintian complaint
  * TimeSeriesView: print more debugging info

 -- Alexander Bürger <alexander.buerger@met.no>  Wed, 01 Oct 2014 14:47:52 +0200
